UI Improvements: Remove wallet sidebar and update to black theme - Removed wallet balance sidebar from the main layout - Updated swap panel background to pure black - Centered swap interface with max-width of 480px - Changed input field backgrounds to darker gray for better contrast - Removed meme token factory contracts and related tests - Fixed Move test imports and simplified staking tests - Added inline token dropdown component for better UX

--- a/move/arva/Move.toml
+++ b/move/arva/Move.toml
@@ -7,5 +7,6 @@ Iota = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-f
 
 [addresses]
 Blitz = "0x0"
+blitz = "0x0"
 iota_std = "0x1"
 iota = "0x2"
