Clean up codebase and reset liquidity pools - Remove 27 unused components, hooks, and services - Clean up unused imports across multiple files - Remove unused UI component dependencies from package.json - Add consolidated pool reset and creation scripts - Add API endpoint for pool reset functionality - Organize and simplify script commands in package.json This significantly reduces the codebase size and improves maintainability.

--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "lint": "next lint",
     "start": "next start",
     "deploy:contracts": "node scripts/deploy-contracts.js",
-    "create:stiota-pool": "tsx scripts/create-stiota-iota-pool.ts",
-    "create:pools": "tsx scripts/create-pools.ts",
-    "republish:stiota-pool": "tsx scripts/republish-stiota-pool.ts",
-    "find:pools": "tsx scripts/find-existing-pools.ts"
+    "reset:pools": "tsx scripts/reset-pools.ts",
+    "create:pools": "tsx scripts/create-pools.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -27,13 +25,9 @@
     "@radix-ui/react-avatar": "1.1.2",
     "@radix-ui/react-checkbox": "1.1.3",
     "@radix-ui/react-collapsible": "1.1.2",
-    "@radix-ui/react-context-menu": "2.2.4",
     "@radix-ui/react-dialog": "1.1.4",
     "@radix-ui/react-dropdown-menu": "2.1.4",
-    "@radix-ui/react-hover-card": "1.1.4",
     "@radix-ui/react-label": "2.1.1",
-    "@radix-ui/react-menubar": "1.1.4",
-    "@radix-ui/react-navigation-menu": "1.2.3",
     "@radix-ui/react-popover": "1.1.4",
     "@radix-ui/react-progress": "1.1.1",
     "@radix-ui/react-radio-group": "1.2.2",
@@ -46,7 +40,6 @@
     "@radix-ui/react-tabs": "1.1.2",
     "@radix-ui/react-toast": "1.2.4",
     "@radix-ui/react-toggle": "1.1.1",
-    "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@tanstack/react-query": "^5.81.5",
     "autoprefixer": "^10.4.20",
@@ -54,16 +47,12 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
-    "embla-carousel-react": "8.5.1",
-    "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
-    "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
-    "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
