Remove all scripts and update package.json - Remove entire scripts directory with all deployment and pool management scripts - Update package.json to keep only essential Next.js commands (build, dev, lint, start) - Simplify project structure by removing script dependencies

--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start",
-    "deploy:contracts": "node scripts/deploy-contracts.js",
-    "reset:pools": "tsx scripts/reset-pools.ts",
-    "create:pools": "tsx scripts/create-pools.ts"
+    "start": "next start"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
